--- a/src/app/pages/noticias/noticias.page.html
+++ b/src/app/pages/noticias/noticias.page.html
@@ -25,7 +25,7 @@
                     <ion-row>
                         <ion-col size="3">
                             <ion-button fill="outline" color="light" (click)="meGusta(noticia)">
-                                <ion-icon color="{{existe(noticia) ? 'danger' : 'primary'}}" md="heart-sharp"></ion-icon>
+                                <ion-icon color="{{existe(noticia) ? 'danger' : 'secondary'}}" md="heart-sharp"></ion-icon>
                             </ion-button>
                         </ion-col>
                         <ion-col size="3" style="top: 17px;">
