--- a/src/app/components/aceptar-reto/aceptar-reto.component.html
+++ b/src/app/components/aceptar-reto/aceptar-reto.component.html
@@ -18,21 +18,21 @@
 
   <div *ngFor="let s of solicitud">
       <ion-row class="ion-padding-bottom">
-          <ion-col size="8">
+          <ion-col size="7">
               <ion-label>
+                  <h1>{{s.equipo.nombre}}</h1>
                   <h2>{{s.usuario.nombre}} {{s.usuario.nombre.apellidos}}</h2>
-                  <h3></h3>
-                  <p>{{s.usuario.nombre.email}}</p>
+                  <p style="font-size: 9px;">{{s.usuario.email.toLowerCase()}}</p>
               </ion-label>
           </ion-col>
-          <ion-col size="4">
+          <ion-col size="5">
 
-              <!-- <ion-icon  color="success"                        md="star-sharp"></ion-icon> -->
+
               <br>
 
               <ion-row>
-                  <ion-col size="6" style="top: -24px;">
-                      <ion-button fill="outline" color="light">
+                  <ion-col size="5" style="top: -24px;">
+                      <ion-button fill="outline" color="light" (click)="aceptar()">
                           <ion-icon color="success" md="checkmark-sharp"></ion-icon>
                       </ion-button>
                   </ion-col>
@@ -43,7 +43,7 @@
                   </ion-col>
               </ion-row>
 
-              <!--<ion-toggle [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">Habilitar</ion-toggle>-->
+
           </ion-col>
       </ion-row>
   </div>
