--- a/src/app/components/aceptar-reto/aceptar-reto.component.html
+++ b/src/app/components/aceptar-reto/aceptar-reto.component.html
@@ -32,7 +32,7 @@
 
               <ion-row>
                   <ion-col size="5" style="top: -24px;">
-                      <ion-button fill="outline" color="light" (click)="aceptar()">
+                      <ion-button fill="outline" color="light" (click)="aceptar(s)">
                           <ion-icon color="success" md="checkmark-sharp"></ion-icon>
                       </ion-button>
                   </ion-col>
