--- a/src/app/crear-equipo/crear-equipo.component.html
+++ b/src/app/crear-equipo/crear-equipo.component.html
@@ -235,10 +235,8 @@
                         
                         <div style="color: rgb(119, 28, 28);">Partido</div>
 
-                        <div>{{P.equipoA.nombre}}</div>
-                        <div>{{P.resultadoEquipoA}}</div>
-                        <div>{{P.equipoB.nombre}}</div>
-                        <div>{{P.resultadoEquipoB}}</div>
+                        <div>{{P.equipoA.nombre}} - {{P.resultadoEquipoA}} / {{P.resultadoEquipoB}} - {{P.equipoB.nombre}}</div>
+
                         <div>{{P.fecha}}</div>
 
                     </div>
